--- a/about.html
+++ b/about.html
@@ -162,12 +162,12 @@
     <footer>
         <div class="footer-content">
             <div class="footer-links">
-                <a href="https://www.linkedin.com/in/michael-weaver-3017771bb/">
+                <a href="https://www.linkedin.com/in/victor-reyes-gutierrez-747176236/">
                     <img src="https://tse4.mm.bing.net/th/id/OIP.BWDVnrxuZ-oqBPomMrdVugHaB4?r=0&rs=1&pid=ImgDetMain&o=7&rm=3&adlt=strict" alt="LinkedIn">
                 </a>
             </div>
             <div class="footer-info">
-                <p>&copy; 2025 Michael Weaver Web Page</p>
+                <p>&copy; 2025 Victor Reyes Web Page</p>
                 <p class="footer-quote">"Adventure awaits around every corner"</p>
             </div>
         </div>
