--- a/about.html
+++ b/about.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Learn more about Michael Weaver's hiking adventures, fishing trips, and model car building hobby. Discover the stories behind the adventures.">
-    <title>About Victor Reyes Gutierrez - Adventures & Hobbies</title>
+    <meta name="description" content="Learn more about Victor Reyes' traveling adventures, professional and academic experience, and gaming PC building side business. Discover the stories behind the adventures.">
+    <title>About Victor Reyes Gutierrez - Adventures, Hobbies, & experience</title>
     <link rel="stylesheet" href="index.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <script src="script.js" defer></script>
@@ -26,7 +26,7 @@
         <nav id="nav-links">
             <a href="index.html" class="nav-link">Home</a>
             <a href="about.html" class="nav-link active">About</a>
-            <a href="portfolio.html" class="nav-link">Portfolio</a>
+            <a href="portfolio.html" class="nav-link">Professional & Academic Portfolio</a>
             <a href="Contact.html" class="nav-link">Contact</a>
         </nav>
     </header>
