Update Contact.html with new links and styles

--- a/Contact.html
+++ b/Contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Victor Reyes Gutierrez</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="Homepage.css">
     <script src="script.js" defer></script>
 </head>
 <body>  
@@ -12,9 +12,10 @@
         <h1>Victor Reyes Gutierrez</h1>
         <div id="nav-links">
                                <a href="index.html">Home</a>
-                           <a href="about.html">About</a>
+                           <a href="AboutMe.html">About</a>
                <a href="portfolio.html">Portfolio</a>
                <a href="Contact.html">Contact</a>
+	       <a href="VMRepairsHome.html" class="nav-link">VMRepairs</a>
             </header>
 <body>
 
@@ -44,5 +45,4 @@
             <img src="https://tse4.mm.bing.net/th/id/OIP.BWDVnrxuZ-oqBPomMrdVugHaB4?r=0&rs=1&pid=ImgDetMain&o=7&rm=3&adlt=strict" alt="LinkedIn" style="height:30px;">
         </a>
         <p>&copy; 2025 Victor Reyes Gutierrez Web Page</p>
-
         </div>
