Add Federal Enterprise Service Desk support section
Added a new section detailing the Federal Enterprise Service Desk support experience, including the process of building a custom PC and associated statistics.

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -88,6 +88,51 @@
             </div>
         </section>
 
+
+         <!-- Enterprise Service Desk -->
+        <section class="adventure-section">
+            <div class="adventure-content">
+                <div class="adventure-text">
+                    <h2>Federal Enterprise Service Desk Support</h2>
+                    <p>
+                        Building my PC was an exciting and rewarding experience that combined problem-solving, 
+                        research, and hands-on work. I started by carefully choosing each component—CPU, GPU, 
+                        motherboard, RAM, storage, power supply, and case—making sure everything was compatible 
+                        and suited to my needs, whether for gaming, productivity, or both.
+                    </p>
+                    <p>
+                        Once all the parts arrived, I laid them out and began the assembly process, starting 
+                        with installing the CPU and cooler onto the motherboard, followed by the RAM and storage. 
+                        Placing the motherboard into the case and connecting all the cables took patience and 
+                        attention to detail, especially when managing wires for a clean build.
+                    </p>
+                    <p>
+                        After everything was connected, the moment of truth came when I powered it on for the 
+                        first time—and seeing the system boot up properly was incredibly satisfying. Building 
+                        my PC not only gave me a deeper understanding of how computers work but also gave me 
+                        a custom machine tailored perfectly to my needs.
+                    </p>
+                    <div class="adventure-stats">
+                        <div class="stat-item">
+                            <span class="stat-number" data-target="1">3</span>
+                            <span class="stat-label">Positions Held</span>
+                        </div>
+                        <div class="stat-item">
+                            <span class="stat-number" data-target="8">1</span>
+                            <span class="stat-label">Federal Agencies Supported</span>
+                        </div>
+                        <div class="stat-item">
+                            <span class="stat-number" data-target="100">2</span>
+                            <span class="stat-label">Meritt Awards</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="adventure-image">
+                    <img src="images/IMG_3234.jpg" alt="Custom PC Build" class="feature-image">
+                </div>
+            </div>
+        </section>
+        
         <!-- Technical Skills Section -->
         <section class="skills-section">
             <h2>Technical Skills Demonstrated</h2>
