--- a/Portfolio.html
+++ b/Portfolio.html
@@ -24,7 +24,7 @@
     <header>
         <h1>Victor Reyes Gutierrez</h1>
         <nav id="nav-links">
-            <a href="index.html" class="nav-link">Home</a>
+            <a href="Homepage.html" class="nav-link">Home</a>
             <a href="AboutMe.html" class="nav-link">About</a>
             <a href="portfolio.html" class="nav-link active">Portfolio</a>
             <a href="Contact.html" class="nav-link">Contact</a>
